<resources>
    <string name="app_name">MaterialComp</string>
    <string name="button">Show Alert</string>
    <string name="Title">ALERT</string>
    <string name="Message">This is a simple alert message for the custom Material alert dialog</string>
    <string name="add_category">Add Category</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit">Edit</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">Cancel</string>
</resources>