<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alertbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="4dp"
        android:text="@string/button"
        android:textColor="#FFFFFF"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.250" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="32dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_add_24"
            app:backgroundTint="@color/yellow" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/yellow"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/contactFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/yellow"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/editFab"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_add_24"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/categoryFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/yellow"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/contactFab"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_folder_24"
        android:focusable="true" />

    <TextView
        android:id="@+id/txt_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/fab_txt_background"
        android:fontFamily="@font/raleway_semibold"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:paddingEnd="16dp"
        android:paddingBottom="6dp"
        android:text="@string/add_category"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/categoryFab"
        app:layout_constraintEnd_toStartOf="@+id/categoryFab"
        app:layout_constraintTop_toTopOf="@+id/categoryFab" />

    <TextView
        android:id="@+id/txt_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/fab_txt_background"
        android:fontFamily="@font/raleway_semibold"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:paddingEnd="16dp"
        android:paddingBottom="6dp"
        android:text="@string/add_contact"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/contactFab"
        app:layout_constraintEnd_toStartOf="@+id/contactFab"
        app:layout_constraintTop_toTopOf="@+id/contactFab" />

    <TextView
        android:id="@+id/txt_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/fab_txt_background"
        android:fontFamily="@font/raleway_semibold"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:paddingEnd="16dp"
        android:paddingBottom="6dp"
        android:text="@string/edit"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/editFab"
        app:layout_constraintEnd_toStartOf="@+id/editFab"
        app:layout_constraintTop_toTopOf="@+id/editFab" />

</androidx.constraintlayout.widget.ConstraintLayout>